[gd_scene load_steps=5 format=3 uid="uid://b740a2agojm18"]

[ext_resource type="LabelSettings" uid="uid://who7h76ycpko" path="res://styles/labels/label_content_40.tres" id="1_0bpdh"]
[ext_resource type="Script" uid="uid://dmt2qnfgeohdl" path="res://scripts/credits.gd" id="1_2fbfq"]
[ext_resource type="LabelSettings" uid="uid://dt6e1w8og3low" path="res://styles/labels/label_content_32.tres" id="2_0ctdu"]
[ext_resource type="LabelSettings" uid="uid://7r267pcwb314" path="res://styles/labels/label_content_24.tres" id="3_2fbfq"]

[node name="Credits" type="CanvasLayer" groups=["events"]]
layer = 3
script = ExtResource("1_2fbfq")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.25
offset_top = -239.125
offset_right = 358.25
offset_bottom = 239.125
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "CREDITS"
label_settings = ExtResource("1_0bpdh")
horizontal_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "HEADER"
label_settings = ExtResource("2_0ctdu")
horizontal_alignment = 1
autowrap_mode = 3

[node name="VersionLabel" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("3_2fbfq")
horizontal_alignment = 1

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "DEVELOPERS"
label_settings = ExtResource("2_0ctdu")
horizontal_alignment = 1

[node name="DeveloperLabel" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("3_2fbfq")
horizontal_alignment = 1

[node name="Control3" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label5" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "TESTERS"
label_settings = ExtResource("2_0ctdu")
horizontal_alignment = 1

[node name="TestersLabel" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("3_2fbfq")
horizontal_alignment = 1

[node name="Control4" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label6" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "ICONS"
label_settings = ExtResource("2_0ctdu")
horizontal_alignment = 1

[node name="IconsLabel" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("3_2fbfq")
horizontal_alignment = 1

[node name="Control5" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label7" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "FONTS"
label_settings = ExtResource("2_0ctdu")
horizontal_alignment = 1

[node name="FontsLabel" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("3_2fbfq")
horizontal_alignment = 1

[node name="Control6" type="Control" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label8" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "LICENSES"
label_settings = ExtResource("2_0ctdu")
horizontal_alignment = 1

[node name="LicensesLabel" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
label_settings = ExtResource("3_2fbfq")
horizontal_alignment = 1
